Simplify lead paragraph in entries.html
Updated the lead paragraph to simplify the message.

--- a/entries.html
+++ b/entries.html
@@ -68,7 +68,7 @@
 <main class="main">
   <section class="container section section--narrow">
     <h1 class="page-title title-gradient">Список зареєстрованих команд</h1>
-    <p class="lead muted">Оновлюється автоматично після відправки заявки з форми.</p>
+    <p class="lead muted">Оновлюється автоматично.</p>
 
     <!-- toolbar без пошуку -->
     <div class="toolbar">
