--- a/events/osinniy-korop-2025.html
+++ b/events/osinniy-korop-2025.html
@@ -7,33 +7,25 @@
   <link rel="stylesheet" href="../assets/css/main.css">
   <script defer src="../assets/js/config.js"></script>
   <style>
-    .teams-list { 
-      margin-top: 20px; 
-      border-collapse: collapse; 
-      width: 100%; 
-      background: #111; 
-      border-radius: 10px; 
-      overflow: hidden; 
+    body{background:#0d0d0f;color:#fff}
+    .teams-list {
+      margin-top:20px;width:100%;border-collapse:collapse;
+      background:#111;border-radius:10px;overflow:hidden;
     }
     .teams-list th, .teams-list td {
-      padding: 12px 15px;
-      border-bottom: 1px solid rgba(255,255,255,0.1);
-      text-align: left;
+      padding:12px 15px;text-align:left;border-bottom:1px solid rgba(255,255,255,.08);
     }
     .teams-list th {
-      background: linear-gradient(90deg, #ffb300, #a11b1b);
-      color: #fff;
-      text-transform: uppercase;
-      letter-spacing: 0.5px;
-      font-size: 0.9rem;
+      background:#15161a;color:#e0e0e0;
+      text-transform:uppercase;letter-spacing:.4px;font-size:.88rem;
+      font-weight:600;
     }
-    .teams-list td {
-      color: #eaeaea;
-      font-size: 0.95rem;
-    }
-    .teams-list tr:hover td {
-      background: rgba(255,255,255,0.05);
-    }
+    .teams-list td {color:#f1f1f1;font-size:.95rem;}
+    .teams-list tr:hover td {background:rgba(255,255,255,.05);}
+    .num{width:3.5rem;opacity:.7}
+    .food-badge{display:inline-block;padding:6px 10px;border-radius:999px;font-size:.9rem;line-height:1;border:1px solid rgba(255,255,255,.15)}
+    .food-yes{background:#1d2a18;color:#d7f7d7;border-color:rgba(22,163,74,.35)}
+    .food-no{background:#2a1918;color:#f5d0d0;border-color:rgba(239,68,68,.35)}
   </style>
 </head>
 
@@ -61,19 +53,16 @@
     <h1 class="page-title title-gradient">Список команд — Осінній короп 2025</h1>
     <p class="lead">Учасники головного осіннього турніру STOLAR CARP на водоймі Лелехівка.</p>
 
-    <!-- Таблиця команд -->
     <table class="teams-list">
       <thead>
         <tr>
-          <th>№</th>
+          <th class="num">№</th>
           <th>Назва команди</th>
-          <th>Капітан</th>
-          <th>Зона</th>
-          <th>Сектор</th>
+          <th>Харчування</th>
         </tr>
       </thead>
       <tbody id="teamsTableBody">
-        <tr><td colspan="5" style="opacity:0.6;">Завантаження...</td></tr>
+        <tr><td colspan="3" style="opacity:.6">Завантаження…</td></tr>
       </tbody>
     </table>
   </section>
@@ -90,62 +79,64 @@
 </footer>
 
 <script>
-  // === Підключення до таблиці Google ===
-  const SHEET_ID = "1v5owevBkZuiRGioOjujOMXvvH4w7zbt5UWDCE8ND2Vo"; // ID твоєї таблиці
-  const GID = "0"; // номер аркуша (змінюй якщо інший)
+  // === Налаштування аркуша ===
+  const SHEET_ID = "1v5owevBkZuiRGioOjujOMXvvH4w7zbt5UWDCE8ND2Vo"; // твій ID таблиці
+  const GID      = "0"; // gid аркуша Осіннього коропа
   const GVIZ = `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?tqx=out:json&gid=${GID}`;
-  const tableBody = document.getElementById('teamsTableBody');
 
-  function parseGViz(text) {
+  const tbody = document.getElementById('teamsTableBody');
+  const norm  = s => (s ?? '').toString().trim();
+  const lower = s => norm(s).toLowerCase();
+
+  function parseGViz(text){
     const start = text.indexOf('{');
-    const end = text.lastIndexOf(')');
+    const end   = text.lastIndexOf(')');
     return JSON.parse(text.substring(start, end));
   }
 
-  const norm = s => (s ?? '').toString().trim();
-  const lower = s => norm(s).toLowerCase();
+  function render(rows){
+    tbody.innerHTML = rows.map((r,i)=>{
+      const yes = lower(r.food) === 'так';
+      const badge = yes
+        ? `<span class="food-badge food-yes">Так${r.foodQty ? ` (${r.foodQty})` : ''}</span>`
+        : `<span class="food-badge food-no">Ні</span>`;
+      return `
+        <tr>
+          <td class="num">${i+1}</td>
+          <td>${r.team}</td>
+          <td>${badge}</td>
+        </tr>`;
+    }).join('');
+  }
 
-  async function loadTeams() {
-    try {
-      const res = await fetch(GVIZ, { cache: 'no-store' });
+  async function loadTeams(){
+    try{
+      const res  = await fetch(GVIZ, {cache:'no-store'});
       const json = parseGViz(await res.text());
 
-      // Підлаштовуємо під твою структуру
-      const rows = (json.table.rows || []).map(r => ({
-        time: r.c?.[0]?.v ?? '',
-        team: r.c?.[1]?.v ?? '',
-        captain: r.c?.[3]?.v ?? '',
-        zone: r.c?.[4]?.v ?? '',
-        sector: r.c?.[5]?.v ?? ''
+      const rows = (json.table.rows||[]).map(r=>({
+        time:    r.c?.[0]?.v ?? '',
+        team:    r.c?.[1]?.v ?? '',
+        food:    r.c?.[5]?.v ?? '',
+        foodQty: r.c?.[6]?.v ?? ''
       }))
-      .filter(r => norm(r.team) && norm(r.captain));
+      .filter(r => norm(r.team));
 
-      const seen = new Set();
-      const uniq = [];
-      for (const r of rows) {
+      const seen = new Set(); const uniq = [];
+      for (const r of rows){
         const key = lower(r.team);
-        if (!key || seen.has(key)) continue;
-        seen.add(key);
-        uniq.push(r);
+        if(!key || seen.has(key)) continue;
+        seen.add(key); uniq.push(r);
       }
-
-      uniq.sort((a, b) => {
-        if (a.time && b.time) return new Date(a.time) - new Date(b.time);
-        return a.team.localeCompare(b.team, 'uk', { sensitivity: 'base' });
+      uniq.sort((a,b)=>{
+        if(a.time && b.time) return new Date(a.time) - new Date(b.time);
+        return a.team.localeCompare(b.team,'uk',{sensitivity:'base'});
       });
 
-      tableBody.innerHTML = uniq.map((r, i) => `
-        <tr>
-          <td>${i + 1}</td>
-          <td>${r.team}</td>
-          <td>${r.captain}</td>
-          <td>${r.zone || ''}</td>
-          <td>${r.sector || ''}</td>
-        </tr>
-      `).join('');
-    } catch (e) {
+      render(uniq);
+    }catch(e){
       console.error(e);
-      tableBody.innerHTML = `<tr><td colspan="5" style="opacity:.6;">Не вдалося завантажити список команд</td></tr>`;
+      tbody.innerHTML = `<tr><td colspan="3" style="opacity:.7">Не вдалося завантажити список</td></tr>`;
     }
   }
 
