--- a/sponsors.html
+++ b/sponsors.html
@@ -1,55 +1,37 @@
-<!doctype html>
-<html lang="uk">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Спонсори — STOLAR CARP</title>
-  <link rel="stylesheet" href="assets/css/main.css">
-  <script defer src="assets/js/config.js"></script>
-</head>
-<body>
-<header class="header">
-  <div class="container header__row">
-    <a class="logo" href="index.html">
-      <span class="logo__mark">SC</span>
-      <span class="logo__text">STOLAR CARP</span>
-    </a>
-    <nav class="nav" id="nav">
-  <a href="index.html" class="nav__link">Головна</a>
-  <a href="rules.html" class="nav__link">Регламент</a>
-  <a href="register.html" class="nav__link">Реєстрація</a>
-  <a href="live.html" class="nav__link">Live</a>
-  <a href="rating.html" class="nav__link">Рейтинг</a>
-  <a href="lakes.html" class="nav__link">Водойми</a>
-  <a href="sponsors.html" class="nav__link">Спонсори</a>
-  <a href="events/turnir-2026.html" class="nav__link">Турнір 2026</a>
-</nav>
-    <button class="burger" id="burger"><span></span><span></span><span></span></button>
-  </div>
-</header>
+<div class="grid grid-3">
 
-<main class="main">
-<section class="container section">
-  <h2>Партнери та спонсори</h2>
-  <div class="grid grid-3">
-    <div class="card"><h3>Pugach Baits</h3><p>Основний спонсор сезону.</p></div>
-    <div class="card"><h3>Trinity Baits</h3><p>Підтримка призового фонду.</p></div>
-    <div class="card"><h3>Charbaits</h3><p>Якісні призові набори.</p></div>
-    <div class="card"><h3>Flagman</h3><p>Брендові призи.</p></div>
-    <div class="card"><h3>One Hook Baits</h3><p>Преміум серії методів та насадок .</p></div>
-    <div class="card"><h3>Інші партнери</h3><p>Дякуємо всім, хто долучився!</p></div>
-  </div>
-</section>
-</main>
+  <a class="card"
+     href="https://puhach.com/?srsltid=AfmBOopLJCDY2nhoCs3zcITMY2nVln2Vitc-kM7aBa25a6K8Y9K_1Uu2"
+     target="_blank" 
+     rel="noopener noreferrer"
+     style="display:block; text-decoration:none;">
+    <h3>Pugach Baits</h3>
+    <p>Основний спонсор сезону.</p>
+  </a>
 
-<footer class="footer">
-  <div class="container footer__row">
-    <div>© 2025 STOLAR CARP · Львів</div>
-    <div class="footer__links">
-  <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh">Viber</a>
-      <a href="https://youtube.com/@dk-stolarcarp?si=H-BUK2msCiKXdcA9">YouTube</a>
-    </div>
+  <div class="card">
+    <h3>Trinity Baits</h3>
+    <p>Підтримка призового фонду.</p>
   </div>
-</footer>
-</body>
-</html>
+
+  <div class="card">
+    <h3>Charbaits</h3>
+    <p>Якісні призові набори.</p>
+  </div>
+
+  <div class="card">
+    <h3>Flagman</h3>
+    <p>Брендові призи.</p>
+  </div>
+
+  <div class="card">
+    <h3>One Hook Baits</h3>
+    <p>Преміум серії методів та насадок.</p>
+  </div>
+
+  <div class="card">
+    <h3>Інші партнери</h3>
+    <p>Дякуємо всім, хто долучився!</p>
+  </div>
+
+</div>
