--- a/sponsors.html
+++ b/sponsors.html
@@ -6,20 +6,49 @@
   <title>Спонсори — STOLAR CARP</title>
   <link rel="stylesheet" href="assets/css/main.css?v=20251110">
   <script defer src="assets/js/config.js"></script>
+
   <style>
-    /* Fallback на випадок, якщо main.css не завантажився */
-    .grid{display:grid;gap:16px}
-    .grid-3{grid-template-columns:repeat(auto-fit,minmax(240px,1fr))}
-    .card{display:block;text-decoration:none;color:inherit}
+    .sponsor-card {
+      text-align: center;
+      cursor: pointer;
+      transition: 0.2s ease;
+      padding: 20px;
+      background: #14151a;
+      border: 1px solid rgba(255,255,255,.08);
+      border-radius: 16px;
+    }
+    .sponsor-card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 0 25px #ffffff15;
+    }
+    .sponsor-logo-wrapper {
+      width: 100%;
+      height: 150px;
+      background: #111;
+      border: 1px solid #333;
+      border-radius: 12px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 12px;
+    }
+    .sponsor-logo-wrapper img {
+      max-width: 85%;
+      max-height: 85%;
+      object-fit: contain;
+    }
   </style>
 </head>
+
 <body>
+
 <header class="header">
   <div class="container header__row">
     <a class="logo" href="index.html">
       <span class="logo__mark">SC</span>
       <span class="logo__text">STOLAR CARP</span>
     </a>
+
     <nav class="nav" id="nav">
       <a href="index.html" class="nav__link">Головна</a>
       <a href="rules.html" class="nav__link">Регламент</a>
@@ -30,50 +59,37 @@
       <a href="sponsors.html" class="nav__link nav__link--active">Спонсори</a>
       <a href="events/turnir-2026.html" class="nav__link">Турнір 2026</a>
     </nav>
+
     <button class="burger" id="burger"><span></span><span></span><span></span></button>
   </div>
 </header>
 
 <main class="main">
   <section class="container section">
-    <h2>Партнери та спонсори</h2>
+    <h2 class="title-gradient">Партнери та Спонсори</h2>
 
     <div class="grid grid-3">
 
-      <!-- Pugach Baits: клікабельна картка -->
-      <a class="card"
+      <!-- Pugach Baits -->
+      <a class="card sponsor-card"
          href="https://puhach.com/?srsltid=AfmBOopLJCDY2nhoCs3zcITMY2nVln2Vitc-kM7aBa25a6K8Y9K_1Uu2"
          target="_blank" rel="noopener noreferrer">
-        <h3>Pugach Baits</h3>
-        <p>Основний спонсор сезону.</p>
+        <div class="sponsor-logo-wrapper">
+          <img src="assets/sponsors/pugach.png" alt="Pugach Baits">
+        </div>
       </a>
 
-      <div class="card">
-        <h3>Trinity Baits</h3>
-        <p>Підтримка призового фонду.</p>
-      </div>
-
-      <div class="card">
-        <h3>Charbaits</h3>
-        <p>Якісні призові набори.</p>
-      </div>
-
-      <div class="card">
-        <h3>Flagman</h3>
-        <p>Брендові призи.</p>
-      </div>
-
-      <div class="card">
-        <h3>One Hook Baits</h3>
-        <p>Преміум серії методів та насадок.</p>
-      </div>
-
-      <div class="card">
-        <h3>Інші партнери</h3>
-        <p>Дякуємо всім, хто долучився!</p>
-      </div>
+      <!-- Винниківський Короповий Клуб -->
+      <a class="card sponsor-card"
+         href="https://vkk.in.ua"
+         target="_blank" rel="noopener noreferrer">
+        <div class="sponsor-logo-wrapper">
+          <img src="assets/sponsors/vkk.png" alt="Винниківський Короповий Клуб">
+        </div>
+      </a>
 
     </div>
+
   </section>
 </main>
 
@@ -86,5 +102,6 @@
     </div>
   </div>
 </footer>
+
 </body>
 </html>
