--- a/sponsors.html
+++ b/sponsors.html
@@ -4,44 +4,51 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Спонсори — STOLAR CARP</title>
+
   <link rel="stylesheet" href="assets/css/main.css?v=20251110">
   <script defer src="assets/js/config.js"></script>
 
   <style>
-    .sponsor-card {
-      text-align: center;
-      cursor: pointer;
-      transition: 0.2s ease;
-      padding: 20px;
+    /* Картки спонсорів */
+    .grid {
+      display: grid;
+      gap: 24px;
+      margin-top: 24px;
+    }
+    .grid-3 {
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    }
+
+    .card {
       background: #14151a;
-      border: 1px solid rgba(255,255,255,.08);
-      border-radius: 16px;
+      border: 1px solid rgba(255,255,255,.1);
+      border-radius: 18px;
+      padding: 0;
+      overflow: hidden;
+      height: 220px;        /* Висота картки */
+      display: block;
+      transition: 0.2s ease;
     }
-    .sponsor-card:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 0 25px #ffffff15;
+
+    .card:hover {
+      transform: scale(1.02);
+      border-color: rgba(255,255,255,.2);
     }
-    .sponsor-logo-wrapper {
+
+    .s-logo {
       width: 100%;
-      height: 150px;
-      background: #111;
-      border: 1px solid #333;
-      border-radius: 12px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-bottom: 12px;
+      height: 100%;
+      object-fit: cover;    /* Заповнює картку */
+      display: block;
     }
-    .sponsor-logo-wrapper img {
-      max-width: 85%;
-      max-height: 85%;
-      object-fit: contain;
+
+    .section h2 {
+      margin-bottom: 18px;
     }
   </style>
 </head>
 
 <body>
-
 <header class="header">
   <div class="container header__row">
     <a class="logo" href="index.html">
@@ -66,39 +73,38 @@
 
 <main class="main">
   <section class="container section">
-    <h2 class="title-gradient">Партнери та Спонсори</h2>
+    <h2>Партнери та Спонсори</h2>
 
     <div class="grid grid-3">
 
-      <!-- Pugach Baits -->
-      <a class="card sponsor-card"
-         href="https://puhach.com/?srsltid=AfmBOopLJCDY2nhoCs3zcITMY2nVln2Vitc-kM7aBa25a6K8Y9K_1Uu2"
-         target="_blank" rel="noopener noreferrer">
-        <div class="sponsor-logo-wrapper">
-          <img src="assets/sponsors/pugach.png" alt="Pugach Baits">
-        </div>
+      <!-- Pugach -->
+      <a class="card" href="https://puhach.com" target="_blank">
+        <img class="s-logo" src="assets/sponsors/pugach.png" alt="Pugach Baits">
       </a>
 
       <!-- Винниківський Короповий Клуб -->
-      <a class="card sponsor-card"
-         href="https://vkk.in.ua"
-         target="_blank" rel="noopener noreferrer">
-        <div class="sponsor-logo-wrapper">
-          <img src="assets/sponsors/vkk.png" alt="Винниківський Короповий Клуб">
-        </div>
+      <a class="card" href="https://vkk.in.ua" target="_blank">
+        <img class="s-logo" src="assets/sponsors/vkk.png" alt="Винниківський Короповий Клуб">
       </a>
 
-    </div>
+      <!-- Місце під майбутніх спонсорів -->
+      <!-- Просто додаси нову картку ось так:
+      <a class="card" href="https://example.com" target="_blank">
+        <img class="s-logo" src="assets/sponsors/logo-name.png" alt="Sponsor Name">
+      </a>
+      -->
 
+    </div>
   </section>
 </main>
 
 <footer class="footer">
   <div class="container footer__row">
     <div>© 2025 STOLAR CARP · Львів</div>
+
     <div class="footer__links">
-      <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh" rel="noopener">Viber</a>
-      <a href="https://youtube.com/@dk-stolarcarp?si=H-BUK2msCiKXdcA9" rel="noopener">YouTube</a>
+      <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh">Viber</a>
+      <a href="https://youtube.com/@dk-stolarcarp?si=H-BUK2msCiKXdcA9">YouTube</a>
     </div>
   </div>
 </footer>
